--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 20.12.1
 
       - name: Install dependencies
-        run: npm install
+        run: cd backend && npm install
 
       - name: Run tests
         run: npm test
