--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,4 +23,4 @@ jobs:
         run: cd backend && npm install
 
       - name: Run tests
-        run: npm test
+        run: cd backend && npm test 
