--- a/frontend/calc/package.json
+++ b/frontend/calc/package.json
@@ -15,7 +15,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/compiler-dom": "^3.5.13",
+    "@vue/server-renderer": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
+    "cypress": "^14.3.1",
     "jsdom": "^26.0.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
