--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  backend-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,22 +19,17 @@ jobs:
         with:
           node-version: 20.12.1
 
-      - name: Install dependencies
+      - name: Install backend dependencies
         run: cd backend && npm install
 
-      - name: Run tests
-        run: cd backend && npm test 
+      - name: Run backend tests
+        run: cd backend && npm test
 
-name: Run Vitest
-
-on: [push, pull_request]
-
-jobs:
-  test:
+  vitest-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Node.js
@@ -42,8 +37,8 @@ jobs:
         with:
           node-version: 20.12.1
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install frontend dependencies
+        run: cd frontend && npm ci
 
       - name: Run Vitest
-        run: npm run test
+        run: cd frontend && npm run test
